nlp/admin/web/src/app/intents/intents.component.css
/*
 * Copyright (C) 2017/2020 e-voyageurs technologies
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.default_category {
  font-style: italic;
}

.category {
  font-size: x-large;
}

.tree {
  margin-top: 20px;
}

.tree-open {
  display: block;
}

.entity_icon {
  position: relative;
  top: 7px;
}

.intent {
  width:200px;
}

.intent_name {
  font-size: larger;
  /* Fixes #733 Responsiveness issues. */
  display: inline-block;
  max-width: 200px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.intent_id {
  text-align: center;
  /* Fixes #733 Responsiveness issues. */
  display: inline-block;
  max-width: 200px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.intent_description {
  white-space: pre-wrap;
}


.shared_application_label {
  font-size: smaller;
}

.shared {
  vertical-align: top;
}

.shared_list {
  padding-top: 10px;
}

.states {
  vertical-align: top;
}

.actions {
}

.entity {
  white-space:nowrap;
}

.status {
  border-radius: 25px;
  padding: 8px;
}

.removeEntity {
  transform: translateX(-8px);
}

.intents {
  margin-top:20px;
}

button:focus {
  outline: 1px dotted;
  outline: 0px auto transparent;
}

